# int-solver

./: .gitignore  .latexmkrc  AGENTS.md  README.md  build.sh  decode_solutions.py  dominik_equations.txt  list_eqn.py  pyproject.toml  solve_omp_opt.cpp
ca_search/: README.md  __init__.py  analyze_candidates.py  binary_catalog.py  build_motion_filter_specs.py  catalog.py  cli.py  density_checkerboard_search.py  density_classification.py  density_schedule_search.py  explore_catalog.py  focused_rule_study.py  lut.py  mechanistic_rule_study.py  object_atlas_study.py  raw_reversibility_screen.py  reversibility.py  reversibility_catalog.py  simple_filters.py  simulator.py
catalogs/: expanded_property_panel_nonzero.json  full_property_panel_nonzero_fixed.json
classifier/: active_adversarial_search.py  adversarial_realistic.py  adversarial_test.py  amplifier_library.py  amplifier_test.py  coarsening_scan.py  composition_search.py  conservative_noise.py  convergence_time_sweep.py  density_margin_analyze.py  density_margin_sweep.py  early_stop_study.py  extended_adversarial.py  failure_analysis.py  failure_diagnostic.py  fates_regnault_2016.py  fates_style.py  finite_switch_coarsener_test.py  h2h_candidates_tier1.json  h2h_candidates_v2.json  h2h_candidates_v3.json  h2h_candidates_v4.json  h2h_candidates_v5.json  head_to_head_benchmark.py  head_to_head_fr.py  hybrid_stochastic.py  make_figures.py  mechanism_probe_58ed6.py  mechanism_probe_58ed6_summary.py  minimal_epsilon.py  multi_switch_schedule.py  multi_switch_two_ncca.py  multiphase_schedule_test.py  one_shot_noise.py  (+16 more)
(+721 files in other folders)
